query-editor: Tooltips don't conform to HIG
Affected versions
- Nightly flatpak: 44.alpha-34099e94
- Stable: 43.2
Steps to reproduce
- Open the filter menu in the query-editor
- Hover the mouse on the elements
Seen behavior
Tooltips are long and aren't capitalized. Also, according to HIG, "tooltip labels should be short and written in header capitalization".
Filter menu button, from the query-editor, doesn't have a tooltip. Acc. HIG, controls in the header bars of primary windows should all have tooltips.
Edited by Ghost User