general: Add missing tooltips to some buttons

Acc. HIG, all controls from headerbars must have a tooltip.

https://developer.gnome.org/hig/patterns/feedback/tooltips.html

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/2754